fix alignment of prologue on mobile devices

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -420,7 +420,7 @@ section {
     }
 
     .prologue {
-      margin-left: 42px !important;
+      margin-left: 40px !important;
       margin-right: 10px;
       padding: 0;
       font-weight: bold;
